# bitfield

./: .cmake-format.json  CMakeLists.txt  README.md
docs/: doxygen.conf
examples/: CMakeLists.txt  example_usage.cpp
include/ecpp/: bitfield.hpp  bitfield_set.hpp  bitfield_view.hpp  bitmask.hpp
tests/: CMakeLists.txt
tests/include/: typed_test.hpp
tests/src/: ____bf_proxy_access.cpp  bitfield_assignment.cpp  bitfield_increment_decrement.cpp  bitfield_set.cpp  bitfield_traits.cpp  bitfield_view_construction.cpp  bitmask.cpp
